[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/MainMenu/BackgroundColorRect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/graphics/kenney2/gui/panel.png" type="Texture" id=2]
[ext_resource path="res://Objects/GUI/Label/Label.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/MainMenu/AboutScreen/AboutScreen.gd" type="Script" id=5]
[ext_resource path="res://Objects/GUI/Button1/Button.tscn" type="PackedScene" id=6]

[node name="ColorRect" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="NinePatchRect" type="NinePatchRect" parent="." index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = -183.5
margin_right = 174.0
margin_bottom = 183.5
texture = ExtResource( 2 )
patch_margin_left = 17
patch_margin_top = 16
patch_margin_right = 15
patch_margin_bottom = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer" index="0"]
margin_left = 20.0
margin_top = 20.0
margin_right = 328.0
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" parent="NinePatchRect/MarginContainer/VBoxContainer" index="0" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 308.0
margin_bottom = 159.0
custom_colors/font_color = Color( 0.368627, 0.47451, 0.556863, 1 )
text = "ANGRY ALIIENS  is open source!

Check it out on github.

Star it if you like it."
align = 0
autowrap = true

[node name="Control" type="Control" parent="NinePatchRect/MarginContainer/VBoxContainer" index="1"]
margin_top = 163.0
margin_right = 308.0
margin_bottom = 221.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Github" parent="NinePatchRect/MarginContainer/VBoxContainer" index="2" instance=ExtResource( 6 )]
margin_left = 59.0
margin_top = 225.0
margin_right = 249.0
margin_bottom = 274.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Github" index="0"]
text = "GITHUB"

[node name="Back" parent="NinePatchRect/MarginContainer/VBoxContainer" index="3" instance=ExtResource( 6 )]
margin_left = 59.0
margin_top = 278.0
margin_right = 249.0
margin_bottom = 327.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Back" index="0"]
text = "BACK"
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/Github" to="." method="_on_Github_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]

[editable path="NinePatchRect/MarginContainer/VBoxContainer/Github"]

[editable path="NinePatchRect/MarginContainer/VBoxContainer/Back"]
